dons_tests/valid_kxi/io_type_check.kxi
void main(){
    int x;
    char y;
    cin >> x;
    cin >> y;
    cout << 'c';
    cout << 1;
    cout << "thing";
}
