dons_tests/invalid_kxi/bad_io_type_check.kxi
void main(){
    string x;
    cin >> x;
    cout << true;
}
